# qr2term-rs

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md
examples/: example-read.rs  example-wifi.rs  example.rs
src/: lib.rs  matrix.rs  qr.rs  render.rs  util.rs
