[package]
name = "qr2term"
version = "0.2.3"
authors = ["Tim Visée <3a4fb3964f@sinenomine.email>"]
license = "MPL-2.0"
readme = "README.md"
homepage = "https://github.com/timvisee/qr2term-rs"
repository = "https://github.com/timvisee/qr2term-rs"
documentation = "https://docs.rs/qr2term"
description = "Stupidly simple Rust crate to render a QR code in the terminal."
keywords = ["qrcode", "terminal", "qr", "code"]
categories = [
    "algorithms",
    "rendering",
    "visualization",
]
edition = "2018"

[lib]
name = "qr2term"
path = "src/lib.rs"

[dependencies]
crossterm = { version = "0.23", default-features = false }
qrcode = { version = "0.12", default-features = false }

[dev-dependencies]
regex = "1"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
