[package]
name = "qr2term"
version = "0.3.3"
authors = ["Tim Visée <3a4fb3964f@sinenomine.email>"]
license = "MPL-2.0"
readme = "README.md"
homepage = "https://github.com/timvisee/qr2term-rs"
repository = "https://github.com/timvisee/qr2term-rs"
documentation = "https://docs.rs/qr2term"
description = "Stupidly simple Rust crate to render a QR code in the terminal."
keywords = ["qrcode", "terminal", "qr", "code"]
categories = ["algorithms", "rendering", "visualization"]
edition = "2021"
rust-version = "1.67.1"

[lib]
name = "qr2term"
path = "src/lib.rs"

[dependencies]
crossterm = { version = "0.28", default-features = false, features = [
    "windows",
] }
qrcode = { version = "0.14", default-features = false }

[dev-dependencies]
regex = { version = "1", default-features = false, features = ["std"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
